<resources>
    <string name="app_name">Calculator</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="number0">0</string>
    <string name="double0">00</string>
    <string name="add">+</string>
    <string name="number3">3</string>
    <string name="number2">2</string>
    <string name="number1">1</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="del">DEL</string>
    <string name="modulo">%</string>
    <string name="clear">CE</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="number4">4</string>
    <string name="number6">6</string>
    <string name="number5">5</string>
</resources>