<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEquation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:inputType="none"
                android:textSize="24sp"
                tools:text="Hello world!" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:inputType="none"
                android:textSize="24sp"
                tools:text="Hello world!" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:columnCount="4"
        android:rowCount="4">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCE"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/clear"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_mod"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/modulo"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/del"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDiv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/div"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:src="@drawable/round_button"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/number7"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/number8"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/number9"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonMul"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/mul"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:src="@drawable/round_button"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/number4"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/number5"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/number6"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/sub"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:src="@drawable/round_button"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/number1"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/number2"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/number3"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/add"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:src="@drawable/round_button"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button00"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/double0"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/number0"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:text="@string/dot"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEq"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/equal"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:src="@drawable/round_button"
                tools:ignore="ContentDescription" />
        </FrameLayout>
    </GridLayout>

</LinearLayout>